added screenshots of programming IDEs

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -256,18 +256,24 @@
     "\n",
     "Following trend chart shows how the [popularity of selected IDEs](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code) suitable for ML programming languages has evolved since 2008:\n",
     "\n",
-    "![Trend chart shows popularity of selected IDEs for ML programming languages (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_IDEs_wide.svg)\n",
+    "![Trend chart shows popularity of selected IDEs for ML programming languages (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=rstudio%2Cjupyter-notebook%2Cvisual-studio-code), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_IDEs_wide.png)\n",
     "\n",
     "#### Visual Studio Code\n",
     "\n",
+    "![Screenshot of IDE *Visual Studio Code* (source: Kasper, license: CC BY-SA)](images/Screenshot_VSC.png)\n",
     "\n",
     "#### JupyterLab\n",
     "\n",
+    "![Screenshot of IDE *JupyterLab* (source: Kasper, license: CC BY-SA)](images/Screenshot_JupyterLab.png)\n",
+    "\n",
+    "#### RStudio\n",
+    "\n",
+    "![Screenshot of IDE *RStudio* (source: Kasper, license: CC BY-SA)](images/Screenshot_RStudio.png)\n",
     "\n",
     "\n",
-    "#### RStudio (based on R language)\n",
+    "#### GNU Octave (GUI)\n",
     "\n",
-    "\n",
+    "![Screenshot of IDE *GNU Octave* (source: Kasper, license: CC BY-SA)](images/Screenshot_GNU_Octave.png)\n",
     "\n"
    ]
   },
@@ -280,7 +286,7 @@
     "\n",
     "Following trend chart shows how the [popularity of selected python packages](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib) suitable for **data analysis**, **data visualization** and **machine learning** has evolved since 2008:\n",
     "\n",
-    "![Trend chart shows popularity of selected python packages for data analysis, data visualization and machine learning (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_MLPythonPackages_wide.svg)\n",
+    "![Trend chart shows popularity of selected python packages for data analysis, data visualization and machine learning (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=pandas%2Ctensorflow%2Cnumpy%2Ckeras%2Cscikit-learn%2Cmatplotlib), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_MLPythonPackages_wide.png)\n",
     "\n",
     "\n",
     "\n",
@@ -319,7 +325,7 @@
     "\n",
     "Following trend chart shows how the [popularity of selected operating systems](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos) used by **data analysts** and **ML developers** has evolved since 2008:\n",
     "\n",
-    "![Trend chart shows popularity of selected operating systems used by **data analysts** and **ML developers** (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_OperatingSystems_wide.svg)\n",
+    "![Trend chart shows popularity of selected operating systems used by **data analysts** and **ML developers** (source: [Stack Overflow Trends](https://insights.stackoverflow.com/trends?tags=windows%2Clinux%2Cmacos), license: CC BY-SA)](images/2022-09-07_StackOverflowTrends_OperatingSystems_wide.png)\n",
     "\n",
     "These are general requirements to the operating system suitable for software development:\n",
     "\n",
@@ -8990,7 +8996,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
@@ -9003,7 +9009,7 @@
   "toc-autonumbering": true,
   "toc-showcode": false,
   "toc-showmarkdowntxt": false,
-  "toc-showtags": true
+  "toc-showtags": false
  },
  "nbformat": 4,
  "nbformat_minor": 5
